More work on automated matching to GTFS for the NextBus to GTFS-realtime tool.